# cinesound

./: .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  PLAN.md  PRD.md  README.md  docker-compose.yml  package-lock.json  package.json  prd-fixes.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  railway.toml
backend/app/: cache.py  config.py  conversation.py  db.py  main.py  memory.py  schemas.py  usage.py
backend/app/agents/: graph.py  playlist.py  profiler.py  ranker.py  search.py  tools.py
backend/app/clients/: gemini.py  groq_client.py  itunes.py  spotify.py  tmdb.py
backend/app/middleware/: daily_cap.py  rate_limit.py
backend/app/routes/: feedback.py  me.py  playlist.py  query.py  share.py  signin.py
backend/migrations/: 001_init.sql  002_shared_pairings.sql
backend/scripts/: migrate.py  seed_movies.py  seed_music.py
backend/tests/: test_cache.py  test_conversation.py  test_daily_cap.py  test_eval_scoring.py  test_feedback_endpoint.py  test_gemini.py  test_gemini_tools.py  test_graph.py  test_groq.py  test_health.py  test_itunes.py  test_me_endpoint.py  test_memory.py  test_playlist_endpoint.py  test_profiler.py  test_query_endpoint.py  test_ranker.py  test_schemas.py  test_search.py  test_share_endpoint.py  test_signin_endpoint.py  test_spotify.py  test_tmdb.py  test_tools.py  test_usage.py
evals/: README.md  queries.csv  run.py  scoring.py
frontend/: .env.local.example  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  page.tsx  (+1 more)
(+20 files in other folders)
